# sml-pc

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.MD  main.cpp  menu.cpp  vulkan_hooks.cpp
.cache/clangd/index/: imconfig.h.6DCE5731A60D7F14.idx  imgui.cpp.03EE20EBA4DEEBD0.idx  imgui.h.CCB7CFD72E97DA93.idx  imgui_demo.cpp.F3A776F62D754196.idx  imgui_draw.cpp.F6E7CF9FF74C3BD8.idx  imgui_impl_vulkan.cpp.BE9087DA469450CA.idx  imgui_impl_vulkan.h.BEFEAF689E1DBA1A.idx  imgui_impl_win32.cpp.D8A9504ACEF037C3.idx  imgui_impl_win32.h.3DEA83AEDE455589.idx  imgui_internal.h.6CF2C56A9FAE7F0D.idx  imgui_tables.cpp.F004A5B769343CB5.idx  imgui_widgets.cpp.3225C32ECDB65EE4.idx  imstb_rectpack.h.B3DCAA8BCC1F2EF4.idx  imstb_textedit.h.B7C7ADD7456B92BE.idx  imstb_truetype.h.6AADF06A1E608847.idx  libmem.h.D150AC164B99F237.idx  main.cpp.B85315AB0CA61540.idx  menu.cpp.317587F6D8DCE3E3.idx  menu.hpp.E945B9446002EAD4.idx  vulkan_hooks.cpp.B9CFF4F6113304C7.idx
include/imgui/: imconfig.h
lib/debug/: libcurl.lib
lib/release/: ktx.lib  libcurl.lib  libcurl_a.lib
mod-demo/: CMakeLists.txt  mod_main.cpp
mod-demo/canvas/release/: canvas.lib
mod-demo/include/: api.h  global_variables.h  imgui.h  mod_main.h
mod-demo/powrprof/debug/: POWRPROF.lib
mod-demo/powrprof/release/: POWRPROF.lib
src/: api.cpp  dx11_hooks.cpp  dx12_hooks.cpp  gif_loader.cpp  global_variables.cpp  hook_vulkan.cpp  hooks.cpp  iconloader.cpp  layer.cpp  main.cpp  menu.cpp  mod_loader.cpp  opengl_hooks.cpp  utils.cpp  vulkan_hooks.cpp
src/include/: api.h  backend.hpp  dx11_hooks.hpp  dx12_hooks.hpp  gif_loader.h  global_variables.h  hooks.hpp  iconloader.h  json.hpp  layer.h  menu.hpp  mod_loader.h  opengl_hooks.hpp  utils.hpp  vulkan_hooks.hpp
